--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section class="phrases-container">
             <button id="btn-phrases" onclick="loadPhrases()">Frase</button>
-                <p id="phrase"></p>
+                <p id="phrases"></p>
         </section>
     </main>
 
